# Basic-Sentiment-Analysis-Project

./: .gitignore  README.md  basic-schema.ipynb  pyproject.toml  sentiment-analysis-app.ipynb
