[tool.poetry]
name = "basic-sentiment-analysis-app"
version = "0.1.0"
description = "This is a basic langchain level-1 application that focuses on chains and prompt Schemas"
authors = ["Dev-Ayush-Stack <dev.ayushpandey.0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
dotenv = "^0.9.9"
langchain = "0.2.11"
langchain-openai = "0.1.20"
ipykernel = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
